--- a/ZoomerFit/Base.lproj/Main.storyboard
+++ b/ZoomerFit/Base.lproj/Main.storyboard
@@ -30,46 +30,6 @@
             <point key="canvasLocation" x="-1384" y="128"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController storyboardIdentifier="WelcomeScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="ZoomerFit" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vzz-4B-25I" userLabel="welcomeLabel">
-                                <rect key="frame" x="54" y="99" width="296" height="87"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="31"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <tabBar contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dEX-oZ-K4Q">
-                                <rect key="frame" x="20" y="797" width="374" height="49"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <items>
-                                    <tabBarItem systemItem="favorites" id="g8W-Zb-Lvc"/>
-                                    <tabBarItem systemItem="search" id="2bb-sr-xaa"/>
-                                    <tabBarItem title="Profile" image="pencil" catalog="system" id="YAK-Lb-UFx"/>
-                                    <tabBarItem title="Item" id="AS6-TW-EQO"/>
-                                    <tabBarItem systemItem="more" id="ptF-oZ-Sz2"/>
-                                </items>
-                            </tabBar>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="dEX-oZ-K4Q" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="QZ5-wQ-s3B"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dEX-oZ-K4Q" secondAttribute="trailing" id="mwA-3T-Ka5"/>
-                            <constraint firstItem="dEX-oZ-K4Q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vv3-dR-kLJ"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2094" y="128"/>
-        </scene>
-        <!--View Controller-->
         <scene sceneID="0q8-eQ-HGM">
             <objects>
                 <viewController storyboardIdentifier="SignInScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="M0e-8z-4s9" customClass="ViewController" customModule="ZoomerFit" customModuleProvider="target" sceneMemberID="viewController">
@@ -104,7 +64,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nqC-qL-N8D" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-707" y="128"/>
+            <point key="canvasLocation" x="-707.24637681159425" y="127.90178571428571"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="j4E-ye-MJg">
@@ -287,18 +247,48 @@ Rating: 5/5</string>
         <!--Home-->
         <scene sceneID="qhf-NB-6Vu">
             <objects>
-                <viewController id="Ir2-S3-Ysf" sceneMemberID="viewController">
+                <viewController id="Ir2-S3-Ysf" customClass="WelcomeViewController" customModule="ZoomerFit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="suM-Jr-nCr">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vkd-q4-CVR">
+                                <rect key="frame" x="132" y="114" width="151" height="99"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" identifier="WelcomeLabel" label="WelcomeLabel"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="carousel1.png" translatesAutoresizingMaskIntoConstraints="NO" id="hxq-C3-isK">
+                                <rect key="frame" x="63" y="265" width="288" height="169"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JUm-jL-HqZ">
+                                <rect key="frame" x="63" y="496" width="288" height="189"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Event" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHl-S7-9wx">
+                                <rect key="frame" x="63" y="213" width="79" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="dcC-KQ-uJv"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" id="FPC-v1-9hY"/>
+                    <connections>
+                        <outlet property="eventImage" destination="hxq-C3-isK" id="in9-qL-cGR"/>
+                        <outlet property="popularityChart" destination="JUm-jL-HqZ" id="Esy-io-I0p"/>
+                        <outlet property="welcomeLabel" destination="suM-Jr-nCr" id="QHA-OD-1DK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zGh-Lk-OQy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2799" y="935"/>
+            <point key="canvasLocation" x="-2800" y="934.82142857142856"/>
         </scene>
         <!--Search-->
         <scene sceneID="3En-F1-Eom">
@@ -307,14 +297,37 @@ Rating: 5/5</string>
                     <view key="view" contentMode="scaleToFill" id="YJc-5N-PBm">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleAspectFit" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dn5-zZ-AkC">
+                                <rect key="frame" x="100" y="216" width="214" height="175"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Browse by Exercise" backgroundImage="exerciseButton.png"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TZ7-Z0-ebv">
+                                <rect key="frame" x="100" y="455" width="214" height="166"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Browse by Coach" backgroundImage="coachButton.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="TZ7-Z0-ebv" firstAttribute="leading" secondItem="U6c-yg-Ul9" secondAttribute="leading" constant="100" id="7cT-qH-ty3"/>
+                            <constraint firstItem="U6c-yg-Ul9" firstAttribute="trailing" secondItem="dn5-zZ-AkC" secondAttribute="trailing" constant="100" id="Qk7-zF-Qpp"/>
+                            <constraint firstItem="U6c-yg-Ul9" firstAttribute="trailing" secondItem="TZ7-Z0-ebv" secondAttribute="trailing" constant="100" id="fcq-iQ-Tzt"/>
+                            <constraint firstItem="dn5-zZ-AkC" firstAttribute="leading" secondItem="U6c-yg-Ul9" secondAttribute="leading" constant="100" id="mFD-k7-MxD"/>
+                            <constraint firstItem="dn5-zZ-AkC" firstAttribute="top" secondItem="U6c-yg-Ul9" secondAttribute="top" constant="200" id="pu5-0p-NQo"/>
+                            <constraint firstItem="U6c-yg-Ul9" firstAttribute="bottom" secondItem="TZ7-Z0-ebv" secondAttribute="bottom" constant="200" id="tcK-KT-plA"/>
+                            <constraint firstItem="TZ7-Z0-ebv" firstAttribute="top" secondItem="dn5-zZ-AkC" secondAttribute="bottom" constant="100" id="wSU-Mj-Ntt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="U6c-yg-Ul9"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="mQN-kS-bVy"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EuP-oR-GzI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2093" y="935"/>
+            <point key="canvasLocation" x="-2095.6521739130435" y="934.82142857142856"/>
         </scene>
         <!--Profile-->
         <scene sceneID="nAW-Vx-pCd">
@@ -370,14 +383,16 @@ Rating: 5/5</string>
         <image name="ZoomerFitLogo.png" width="1002" height="267"/>
         <image name="arrow.left" catalog="system" width="64" height="48"/>
         <image name="athleanx.jpg" width="468" height="612"/>
+        <image name="carousel1.png" width="447" height="294"/>
         <image name="christianfleenor.jpg" width="456.75" height="444.75"/>
         <image name="clarkfir.jpg" width="425" height="531"/>
+        <image name="coachButton.png" width="365" height="250"/>
         <image name="diamondcut.jpeg" width="225" height="225"/>
         <image name="ebenezer samuel.jpeg" width="201" height="251"/>
         <image name="ellipsis" catalog="system" width="64" height="18"/>
+        <image name="exerciseButton.png" width="366" height="250"/>
         <image name="house" catalog="system" width="64" height="54"/>
         <image name="magnifyingglass" catalog="system" width="64" height="56"/>
-        <image name="pencil" catalog="system" width="64" height="56"/>
         <image name="person.circle" catalog="system" width="64" height="60"/>
         <image name="sign in.png" width="1619" height="776"/>
         <image name="star" catalog="system" width="64" height="58"/>
